# fs

./: CMakeLists.txt  README.md
in_lec_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
in_lec_demo/src/: demo.c  rdma_client.c  rdma_client.h  rdma_server.c
rdma_fs/: CMakeCache.txt  Makefile  cmake_install.cmake
rdma_fs/src/: FS.c  demo.c  rdma_server.c
scripts/: bench_readwritepercent.sh  grab_two_nodes.sbatch  plot.py  rdma_test.sbatch  setup_env.sh  test_write.sh  write.fio
src/: CMakeLists.txt  Client.cpp  Client.h  Coordinator.cc  Coordinator.cpp  Coordinator.h  Coordinator.hpp  Coordinator_RPC.grpc.pb.cc  Coordinator_RPC.grpc.pb.h  Coordinator_RPC.pb.cc  Coordinator_RPC.pb.h  Coordinator_RPC.proto  Coordinator_RPCWrapper.cpp  FileSystem.h  MetadataServer.cpp  MetadataServer.h  Rdmafs.cpp  Rdmafs_Backuper.cpp  Rdmafs_Coordinator.cpp  Rdmafs_RPC.proto  Server.cpp  Server.hpp  Tcp.hpp  _benchmark.cc  fs.cc  main.cpp  rdma_client.cpp  rdma_common.hpp  rdma_server.cpp
src_backup/: Client.cpp  Client.hpp  Coordinator.cpp  Coordinator.hpp  Filesystem.cpp  Filesystem.hpp  Server.cpp  Server.hpp  main.cpp
tests/: Client_test.cc  Coordinator_test.cc  Server_test.cc
